# poly-executor

./: .gitignore  Cargo.toml  README.md  assets.csv  config.toml  liquidity_reward.csv  mid.csv
.claude/: settings.local.json
.claude/commands/: deploy-prod.md  ops-prod.md
docs/superpowers/plans/: 2026-04-27-liquidity-reward-live-order-filtering.md
scripts/: deploy_prod.sh  logrotate.conf  ops_prod.sh  remote_bootstrap_prod.sh  start_server.sh  stop_server.sh
src/: clob_client.rs  config.rs  dispatcher.rs  logging.rs  main.rs  market.rs  monitor.rs  notification.rs  order.rs  order_ws.rs  polymarket_rewards.rs  positions.rs  price_store.rs  proxy_ws.rs  recovery.rs  reward_market_cache.rs  reward_market_pool_monitor.rs  storage.rs  strategy.rs  tick_size.rs
src/strategies/: liquidity_reward.rs  mid_requote.rs  mod.rs  pair_arbitrage.rs
