[package]
name = "poly-executor"
version = "0.1.0"
edition = "2024"

[dependencies]
polymarket-client-sdk = { version = "0.3", features = ["ws", "data"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
dashmap = "6"
chrono = "0.4"
tokio-socks = "0.5"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
config = "0.15"
simd-json = { version = "0.14", features = ["serde_impl"] }
url = "2"
csv = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

[profile.release]
opt-level = 3          # 开启最高级别的代码优化 (默认就是3，写上更清晰)
lto = true             # 开启链接时优化 (Link Time Optimization)，极其重要！会显著提升运行速度，但会增加编译时间
codegen-units = 1      # 将所有代码放在一个单元中编译，能做更多的全局优化
panic = "abort"        # 遇到恐慌(panic)直接退出，不进行堆栈展开。能减小文件体积并略微提升性能